// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label tests should render Label correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  border-radius: 4px;
  align-items: center;
  padding: 0.375rem 0.5rem;
  font-size: 0.875rem;
  line-height: 1rem;
  font-weight: 400;
  color: #000000;
  background-color: #E2E2E2;
  width: normal;
  height: normal;
}

<div
    class="c0"
    data-testid="label-container"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label tests should render isTranslucent Label 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  border-radius: 4px;
  align-items: center;
  padding: 0.375rem 0.5rem;
  font-size: 0.875rem;
  line-height: 1rem;
  font-weight: 400;
  color: #174291;
  background-color: rgba(39,110,241,0.1);
  width: normal;
  height: normal;
}

<div
    class="c0"
    data-testid="label-container"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label tests should render medium Label 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  border-radius: 4px;
  align-items: center;
  padding: 0.5rem 0.625rem;
  font-size: 1rem;
  line-height: 1.125rem;
  font-weight: 400;
  color: #FFFFFF;
  background-color: #276EF1;
  width: medium;
  height: medium;
}

<div
    class="c0"
    data-testid="label-container"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;

exports[`Label tests should render small Label 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  border-radius: 4px;
  align-items: center;
  padding: 0.25rem 0.375rem;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  color: #FFFFFF;
  background-color: #276EF1;
  width: small;
  height: small;
}

<div
    class="c0"
    data-testid="label-container"
  >
    <span>
      label
    </span>
  </div>
</DocumentFragment>
`;
